readme file for ZipInputStream not properly closed